--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -4,6 +4,7 @@
   <title>Mocha Spec Runner</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/7.2.0/mocha.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/7.2.0/mocha.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/4.2.0/chai.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/sinon.js/9.2.1/sinon.js"></script>
@@ -15,8 +16,12 @@
     });
   </script>
   <script src="spec/blinkyDancerSpec.js"></script>
+  <script src="spec/bouncyDancerSpec.js"></script>
+  <script src="spec/rickAstleyDancerSpec.js"></script>
   <script src="src/dancer.js"></script>
   <script src="src/blinkyDancer.js"></script>
+  <script src="src/bouncyDancer.js"></script>
+  <script src="src/rickAstleyDancer.js"></script>
 </head>
 <body>
 <div id="mocha"></div>
